<resources>
    <string name="app_name">OptimaxMovil</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_forgot_password">¿Olvistaste la contraseña?</string>
    <string name="text_dont_have_an_account">No tienes cuenta? <font color="#000000"><b>Registrate</b></font></string>
    <string name="text_already_have_an_account">Usuario ya registrado? <font color="#000000"><b>Ingresa</b></font></string>
    <string name="btn_login">LOGIN</string>
    <string name="text_create_an_account">Crear una cuenta</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_pSurname">Apellido Paterno</string>
    <string name="hint_mSurname">Apellido Materno</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_terms_and_conditions">Terminos y condiciones</string>
    <string name="btn_register">Registrar</string>
    <string name="IGV">IGV(18%): </string>
    <string name="btn_registerOrder">Registrar Pedido</string>
    <string name="subTotal">SubTotal: </string>
    <string name="total">Total: </string>
    <string name="delivery_service">Servicio de Delivery: </string>
    <string name="helper_required">Requerido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_request_an_appointment">Registra una cita</string>
    <string name="btn_update">Actualizar</string>
    <string name="hint_district">Distrito</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_apellidop">Apellido Paterno</string>
    <string name="hint_apellidom">Apellido Materno</string>
    <string name="Profile">Perfil</string>
    <string name="hint_code">Codigo</string>
    <string name="warning_activate_card">⚠ Recuerda activar tu tarjeta para compras online</string>
    <string name="data_encrypted"> 🔒 Datos encriptados de extremo a extremo</string>
    <string name="card_number_hint">Numero de tarjeta</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="CVV">CVV</string>
    <string name="btn_pay">Pagar</string>
    <string name="powered_by_culqi">Powered By Culqi</string>
    <string name="total_pay">TOTAL A PAGAR</string>
    <string name="text_additional_info">Informacion Adicional</string>
    <string name="text_info_personal">Informacion Personal</string>
    <string name="text_cart">Carrito</string>
    <string name="text_my_orders">Mis Pedidos</string>
    <string name="text_my_appointment">Mis Citas</string>

</resources>