<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/cart_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CartFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E2085DEF"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:letterSpacing="0.1"
        android:paddingVertical="@dimen/dimen_16sp"
        android:text="@string/text_cart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_Cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/gridlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:rowCount="4"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_Cart">

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:gravity="start"
                android:text="@string/subTotal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_row="1"
                android:layout_column="0"
                android:gravity="start"
                android:text="@string/IGV"
                android:textSize="18dp" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_row="2"
                android:layout_column="0"
                android:gravity="start"
                android:text="@string/delivery_service"
                android:textSize="18dp" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_row="3"
                android:layout_column="0"
                android:gravity="start"
                android:text="@string/total"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvSubTotal"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvIGV"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvDeliveryService"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="S/5.00"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="25dp" />
        </GridLayout>

        <Button
            android:id="@+id/btnRegisterOrder"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:backgroundTint="#E2085DEF"
            android:text="@string/btn_registerOrder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridlayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>