<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E2085DEF"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:letterSpacing="0.1"
        android:paddingVertical="@dimen/dimen_16sp"
        android:text="@string/Profile"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCod"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietCod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPSurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_apellidop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietPSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMSurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_apellidom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietMSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDni"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_dni">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDistrict"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:hint="@string/hint_district">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDirection"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ietDirection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:backgroundTint="#E2085DEF"
        android:fontFamily="@font/quicksand_bold"
        android:layout_gravity="bottom|center"
        android:text="@string/btn_update"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent" />

</FrameLayout>