<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InfoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E2085DEF"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:letterSpacing="0.1"
        android:paddingVertical="@dimen/dimen_16sp"
        android:text="@string/text_info_personal"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/hint_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPSurname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/tilName"
            android:hint="@string/hint_apellidop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ietPSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMSurname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/tilPSurname"
            android:hint="@string/hint_apellidom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ietMSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDni"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/tilMSurname"
            android:hint="@string/hint_dni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ietDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="8" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#E2085DEF"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/btn_update"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/tilDni"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>